# ComputerArchitecturesAndOperatingSystemsTasks

./: CMakeLists.txt  README.md
inf16-1:posix.sockets.http-server-1/: 16-1.c  CMakeLists.txt
inf20-2:posix.shm_sem.smokers/: 20-2.c  CMakeLists.txt
inf21-2:posix.dl.cpp-class-loader/: 21-2.hpp  CMakeLists.txt  main.cpp
inf22-1:posix.sockets.icmp-ping/: 22-1.c  CMakeLists.txt
inf22-2:posix.sockets.udp-dns-resolver/: 22-2.c  CMakeLists.txt  hosts.txt
inf24-1:fuse.mergefs/: 24-1.cpp  CMakeLists.txt
inf25-1:openssl.decrypt-aes-256-cbc/: 25-1.c  CMakeLists.txt  private.pem  public.pem
macro_check/: test.c
